edit php and style scss

--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -2,6 +2,7 @@
 # Montessori
 --------------------------------------------------------------*/
 /////*Start History Section**/////
+
 .history-content {
     width: 100%;
     flex-wrap: wrap;
@@ -27,7 +28,9 @@
         display: block;
 
         img {
-          padding-top: 40px;
+          height:100%;
+          width:100%;
+            padding-top: 40px;
             float: left;
         }
         @include desktop {
@@ -65,53 +68,26 @@
         width: 100%;
     }
     @include desktop {
-        blockquote {
-            width: 75%;
-            min-width: 70%;
-            top: 10px;
-            margin: 0 0 0 15%;
-            padding-left: 25px;
-            position: relative;
-
-            p {
-                margin: 0;
-                font-size: 2rem;
-            }
-        }
-
-        blockquote::before {
-            content: "";
-            display: inline-block;
-            position: absolute;
-            top: 5PX;
-            left: 0PX;
-            height: 100%;
-            border-left: solid 12px $border_left_red;
-            font-size: 1.5rem;
-        }
-
-        p {
-            display: inline-block;
-            text-align: left;
-        }
+         @include quote{}
     }
 }
 ////************philosophy Section ************/////
-.active{
-  visibility: visible;
+
+.active {
+    visibility: visible;
 }
+
 .main-philosophy {
     margin: 100px auto;
-    width: 400px;
     min-width: 75%;
     height: auto;
     @include flex(center,space-around);
     flex-wrap: wrap;
     position: relative;
     @include desktop {
-        width: 1000px;
-        min-width: 950px;
-        height: 640px;
+        width: 1200px;
+        min-width: 1200px;
+        height: 800px;
     }
 
     div {
@@ -123,13 +99,13 @@
         width: 200px;
         height: 200px;
         background-color: #AFF1D3;
-        margin-top: 20px;
+        margin: 35px 10px;
         @include flex(center,space-between);
         flex-wrap: wrap;
         position: relative;
         @include desktop {
-            width: 300px;
-            height: 300px;
+            width: 330px;
+            height: 330px;
             background-color: #AFF1D3;
             -webkit-transition: 0.8s;
             -webkit-transform-style: preserve-3d;
@@ -167,7 +143,7 @@
                 @include desktop {
                     left: 48px;
                     top: -19px;
-                    width: 210px;
+                    width: 225px;
                     height: 186px;
                     @include visibility(hidden);
                 }
@@ -182,11 +158,10 @@
             width: 80%;
             color: #248e6a;
             height: auto;
-            overflow: hidden;
             padding: 0;
-            bottom: 14px;
+            bottom: 44px;
             line-height: 0.9rem;
-            right: 10px;
+            right: 22px;
             position: absolute;
 
             a {
@@ -217,22 +192,21 @@
             display: inline-block;
             font-family: $font_body;
             position: absolute;
-            top: -17px;
-            overflow-y: scroll;
+            top: -55px;
             font-size: 1.3rem;
-            left: 0;
+            left: -65px;
             z-index: 1000;
-            height: 300px;
-            width: 300px;
+            height: 400px;
+            width: 460px;
             @include border-radius (10px);
             border: 1px solid #248E6A;
             text-align: left;
-            overflow: hidden;
             padding: 5px;
-            visibility: hidden;
+            display: none;
             @include desktop {
                 overflow: scroll;
                 font-size: 1.2rem;
+                display: inline;
                 visibility: visible;
                 @include visibility(hidden);
                 background-color: #fff;
@@ -243,6 +217,7 @@
 }
 ////************End philosophy Section ************/////
 ////////*******Start Materials Section******/////////
+
 .main-materials div:nth-of-type(3) {
     @include desktop {
         flex-direction: row-reverse;
@@ -262,7 +237,7 @@
 .materials {
     width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center;
     @include desktop {
          @include flex(center,space-between);
@@ -271,10 +246,12 @@
     }
 
     img {
-        width: 300px;
-        height: 300px;
+        width: 400px;
+        height: 400px;
         @include desktop {
             margin-top: 50px;
+            width: 300px;
+            height: 300px;
         }
     }
 }
@@ -289,31 +266,7 @@
     @include desktop {
         width: 60%;
         min-width: 50%;
-
-        blockquote {
-            width: 75%;
-            top: 10px;
-            margin: 0 0 0 15%;
-            padding-left: 25px;
-            display: inline-block;
-            position: relative;
-
-            p {
-                margin: 0;
-                font-size: 2rem;
-            }
-        }
-
-        blockquote::before {
-            content: "";
-            display: block;
-            position: absolute;
-            top: 5PX;
-            left: 0PX;
-            height: 100%;
-            border-left: solid 12px $border_left_red;
-            font-size: 1.5rem;
-        }
+        @include quote {}
 
         p {
             display: inline;
@@ -329,9 +282,7 @@
 
 .benefits li {
     list-style-type: disc;
-    @include desktop {
-        // color:red;
-    };
+    @include desktop {};
 }
 
 .first-benefits-section {
@@ -345,8 +296,8 @@
     }
 
     img {
-        width: 250px;
-        height: 250px;
+        width: 400px;
+        height: 400px;
         margin-top: 30px;
         @include desktop {
             align-self: flex-start;
@@ -360,35 +311,7 @@
 .benefits-content {
     width: 100%;
     @include desktop {
-        blockquote {
-            width: 70%;
-            top: 10px;
-            margin: 0 0 0 15%;
-            padding-left: 25px;
-            display: inline-block;
-            position: relative;
-
-            p {
-                margin: 0;
-                font-size: 2rem;
-            }
-        }
-
-        blockquote::before {
-            content: "";
-            display: block;
-            position: absolute;
-            top: 5PX;
-            left: 0PX;
-            height: 100%;
-            border-left: solid 12px $border_left_red;
-            font-size: 1.5rem;
-        }
-
-        p {
-            padding-top: 4px;
-            text-align: left;
-        }
+         @include quote{}
     }
 }
 
@@ -402,16 +325,17 @@
     }
 }
 ///Archive and rescourses sections////
+
 .the-archive ul {
     width: 500px;
-    line-height: 2.5rem;
-    font-size: 1.6rem;
+    line-height: 2.4rem;
+    font-size: 2rem;
     font-family: $font_title;
 
     li {
         padding-left: 30px;
         line-height: inherit;
-        font-size: 1.4rem;
+        font-size: 1.6rem;
 
         a {
             color: $color_btn_hover_green;
@@ -432,7 +356,7 @@
     font-family: $font_title;
     @include desktop {
         line-height: 2.5rem;
-        font-size: 1.6rem;
+        font-size: 1.8rem;
         width: 600px;
     };
 
@@ -451,19 +375,21 @@
 }
 
 .montessori-archive {
+    border-top: solid 3px $color_btn_green;
+    padding-top: 12px;
+    margin-top: 40px;
+    width: 65%;
+
     h3 {
-        width: 600px;
-        border-top: solid 3px $color_btn_green;
-        padding-top: 12px;
+        @include desktop {
+            width: 600px;
+        };
     }
 }
 ///rotate the arrow and toggle the contents
 
 .rotate {
-    -moz-transform: rotate(180deg);
-    -webkit-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
+    @include rotate(180deg);
 }
 
 .toggle {
@@ -476,7 +402,7 @@
     padding-left: 10px;
     cursor: pointer;
 }
-/*Start Resources Section  */
+/******** Start Resources Section ********/
 .main-resources {
     border-bottom: none;
     height: 400px;
@@ -484,11 +410,11 @@
 }
 
 .green-bt {
-    background-color: #4fc8a1;
+    background-color: $color_btn_green;
     @include border-radius (6px);
     letter-spacing: 0.8px;
     display: block;
-    margin: 10px auto;
+    margin: 60px auto;
     text-shadow: none;
     width: 300px;
     height: 60px;
