--- a/themes/montessori-theme/sass/_about.scss
+++ b/themes/montessori-theme/sass/_about.scss
@@ -6,16 +6,57 @@
 * {
 	box-sizing: border-box;
 }
-// @media screen and (max-width: 480px) {
-
 .about-wrapper {
 	margin: 0 auto;
 	padding-left: $basic_pading * 2;
 	padding-right: $basic_pading * 2;
-	max-width: $desktop_width;
-	background-color: grey;
+}
+
+
+fonts h1,
+h2,
+h3 {
+	font-family: $font_title;
+	font-weight: normal;
+}
+
+h1 {
+	font-size: $h1_size_mob;
+	line-height: 2.625rem;
+}
+
+h2 {
+	font-size: $h2_size_mob;
+	line-height: 2.125rem;
+}
+
+h3 {
+	font-size: $h3_size_mob;
+	line-height: 1.6875rem;
+}
+
+p {
+	font-size: 1.625rem;
+	line-height: $mobile_line_height;
+	font-style: $font_body;
+}
+
+.spcil p {
+	font-size: 1.25rem;
+	line-height: $mobile_line_height;
+	font-style: $font_main;
+}
+
+.green-btn {
+	background-color: #4FC8A1;
+	color: $white;
+	font-family: "Noto Sans";
+	font-size: 1.25rem;
+	font-weight: normal;
+	text-decoration: none;
 }
 // about NW School Sectio
+
 .about-school {
 	border-bottom: solid 3px $color_btn_green;
 	padding-bottom: $basic_margin*7.8;
@@ -27,9 +68,9 @@
 	flex-wrap: wrap;
 	display: flex;
 	flex-direction: column;
-	@include desktop {
-		flex-direction: column;
-	};
+	// @include desktop {
+	// 	flex-direction: column;
+	// };
 
 	.members-grid {
 		display: flex;
@@ -47,7 +88,7 @@
 			@include desktop {
 				max-width: 990px;
 				flex: 1;
-			};
+			}
 		}
 
 		.flip-container {
@@ -78,7 +119,6 @@
 					line-height: $basic_hline_height*2.4;
 				}
 			}
-
 			.front {
 				position: absolute;
 				background-size: cover;
@@ -122,10 +162,10 @@
 		.front {
 			width: 125px;
 			height: 125px;
-			@media screen and (min-width: 650px) {
+			@media screen and (min-width: 768px) {
 				width: 190px;
 				height: 190px;
-			};
+			}
 			@include desktop {
 				width: 200px;
 				height: 200px;
@@ -141,7 +181,7 @@
 
 		.members_det {
 			text-align: center;
-			// font-size: $font_member_staff;
+			font-size: $font_member_staff;
 		}
 	}
 }
@@ -161,7 +201,6 @@
 		@include desktop {
 			flex-wrap: nowrap;
 		};
-
 		.members_at_large-name {
 			font-size: $font_member_staff;
 			justify-content: center;
@@ -182,6 +221,11 @@
 
 	.news-img img {
 		width: 100%;
+	}
+	form{
+    padding: 2rem;
+		input{
+		}
 	}
 
 	.red-more {
