update my branch

--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -27,14 +27,16 @@
     .history-img1 {
        display: block;
 
-       img {
-           padding-top: 40px;
-           float: left;
-       }
-       @include desktop {
-           display: none;
-       };
-   }
+        img {
+          height:100%;
+          width:100%;
+            padding-top: 40px;
+            float: left;
+        }
+        @include desktop {
+            display: none;
+        };
+    }
 
     .history-img {
         display: none;
