styling check box lable

--- a/themes/montessori-theme/sass/_about.scss
+++ b/themes/montessori-theme/sass/_about.scss
@@ -188,6 +188,15 @@ align-self: center;
 		align-self: flex-end;
 	}
 }
+label{
+input{
+	width: 27px;
+  height: 27px;
+  background-color: #fff;
+  border: 3px solid transparent;
+  transition: border-color .2s;
+ }
+}
 // newsLetter Section
 
 .newsLetter {
