--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -817,12 +817,13 @@ div .transparent-menu {
       text-align: left;
       padding: 33px 0 40px; } }
   .footer-block-item3 p {
+    color: #d3e0de;
     margin: 0;
     height: 40px;
     font-size: 1.1rem; }
     @media (min-width: 768px) {
       .footer-block-item3 p {
-        font-size: 1.2rem; } }
+        font-size: 1.4rem; } }
 
 /*the links in the footer */
 .footer-block-item1 li a:hover {
@@ -845,11 +846,13 @@ a:hover {
         padding: 0;
         margin: 0; }
       .desktop-add-block li {
-        line-height: 2rem;
-        font-size: 1.2rem; }
+        color: #d3e0de;
+        list-style-type: none;
+        line-height: 2rem; }
       .desktop-add-block a {
-        cursor: pointer;
-        color: #fff; }
+        font-size: 1.3rem;
+        color: #d3e0de;
+        cursor: pointer; }
       .desktop-add-block a:hover {
         color: #248E6A; } }
 
@@ -1264,8 +1267,7 @@ a:hover {
           transform-style: preserve-3d;
           border-radius: 10px; }
           .site-main .all-features .features-wrapper .features-flipper:hover {
-            -webkit-backface-visibility: hidden;
-            backface-visibility: hidden;
+            visibility: hidden;
             transform: rotateY(180deg); } }
       .site-main .all-features .features-wrapper .features-flipper .front {
         height: 145px;
@@ -1313,7 +1315,6 @@ a:hover {
               font-family: 'Asap';
               font-size: 22px; } }
         .site-main .all-features .features-wrapper .features-flipper .features-back .btn {
-          text-align: center;
           display: inline-block;
           text-align: center;
           color: #248E6A;
@@ -1399,9 +1400,13 @@ body {
   margin-left: 30px; }
 
 .history-title {
+  margin-top: 100px;
   margin-bottom: 0;
   -ms-flex: 0 90%;
       flex: 0 90%; }
+  @media (min-width: 768px) {
+    .history-title {
+      margin-top: 0; } }
 
 .main-history {
   display: flex;
@@ -1419,9 +1424,9 @@ body {
   .main-history .history-img1 {
     display: block; }
     .main-history .history-img1 img {
-      height: 100%;
-      width: 100%;
-      padding-top: 40px;
+      height: 280px;
+      width: 250px;
+      padding-top: 30px;
       float: left; }
     @media (min-width: 768px) {
       .main-history .history-img1 {
