more styling for the pages

--- a/themes/montessori-theme/sass/_header.scss
+++ b/themes/montessori-theme/sass/_header.scss
@@ -1,42 +1,34 @@
 ///**** The Header ***/////
-
 .masthead {
 	position: absolute;
 }
-
 .site-content {
 	padding-top: 180px;
 	top: 0;
 }
-
 .home .site-content {
-
 	padding-top: 80px;
 	@include desktop {
 		padding-top: 150px;
 	};
 }
 ///the second part between two menues///
-
-.home .the-page-title{
-	display:none;
+.home .the-page-title {
+	display: none;
 }
-
 .the-page-title {
 	background-color: #fff;
-    height: 45px;
-    padding: 0 30px;
-
+	height: 45px;
+	padding: 0 30px;
 	ul {
-		@include flex(center,space-between) ;
+		@include flex(center,space-between);
 		flex-direction: row;
 		justify-content: space-between;
 		position: relative;
-
 		li {
 			display: inline-block;
-			a{
-				color:#404040;
+			a {
+				color: #404040;
 			}
 		}
 	}
@@ -45,31 +37,24 @@
 	};
 }
 /////****Start Main Menu**** ////
-
 .main-navigation-container {
 	display: flex;
 }
-
 .main-navigation {
 	padding-top: 40px;
 	margin-right: 38px;
 }
-
 div .menu-primary-menu-container {
 	width: 100%;
 }
-
 .main-navigation {
 	min-width: 70%;
 }
-
 .menu-primary-menu-container {
 	display: none;
-
 	ul {
 		li {
 			display: inline-block;
-
 			a:hover {
 				border-top: 6px solid #57B79F;
 				color: #57B79F;
@@ -78,7 +63,6 @@ div .menu-primary-menu-container {
 		}
 	}
 }
-
 .main-navigation-container {
 	width: 100%;
 	background-color: $white;
@@ -89,19 +73,16 @@ div .menu-primary-menu-container {
 	height: 8rem; //
 	padding: 0 15px; //
 }
-
 .menu-primary-menu-container {
-	@include desktop{
+	@include desktop {
 		font-size: 1.3rem;
 	};
 	@include desktop {
 		white-space: nowrap;
 		display: inline-block;
-
 		ul {
 			li {
 				display: inline;
-
 				a {
 					text-transform: uppercase;
 					text-decoration: none;
@@ -117,16 +98,13 @@ div .menu-primary-menu-container {
 	}
 }
 ///////The Hamburger Menu Section for Mobile size//////
-
 .responsive-menu-button {
 	margin-top: 0.1rem !important;
 }
-
 .responsive-menu-box {
 	width: 34px!important;
 	height: 22px!important;
 }
-
 .responsive-menu-inner,
 .responsive-menu-inner::after,
 .responsive-menu-inner::before {
@@ -134,19 +112,16 @@ div .menu-primary-menu-container {
 	width: 34px!important;
 	height: 4px!important;
 }
-
 button,
 input[type="button"] {
 	box-shadow: none !important;
 }
-
 button#responsive-menu-button {
 	top: 12px!important;
-right: 6%!important;
-background-color: transparent!important;
+	right: 6%!important;
+	background-color: transparent!important;
 	background-color: transparent!important;
 }
-
 #primary-menu li.current-menu-item {
 	a {
 		border-top: 6px solid #57B79F;
@@ -155,7 +130,6 @@ background-color: transparent!important;
 	}
 }
 /////**** The Brand Logo Section ***/////
-
 .montessori-logo {
 	padding: 0;
 	margin: 10px 0 20px 30px;
@@ -168,7 +142,6 @@ background-color: transparent!important;
 		min-width: 16rem;
 		height: 8rem;
 	}
-
 	img {
 		position: relative;
 		height: 100%;
@@ -180,7 +153,6 @@ background-color: transparent!important;
 			padding-top: 0;
 			margin-top: 0;
 		}
-
 		a {
 			bottom: -20px;
 			cursor: pointer;
@@ -189,9 +161,7 @@ background-color: transparent!important;
 		}
 	}
 }
-
 ////****** Main menu wrapper*****///
-
 .main-menu-wrapper {
 	border-bottom: 2px solid #E2E2E2;
 	width: 100%;
@@ -202,7 +172,6 @@ background-color: transparent!important;
 		height: 120px;
 	}
 }
-
 .site-header {
 	z-index: 999;
 	min-width: 380px;
@@ -214,25 +183,22 @@ background-color: transparent!important;
 	};
 	top: 0;
 }
-
 .home .site-header {
 	padding-top: 0;
 	position: absolute;
 }
 ////**Sub Menu Section**/////
-
 .back-to-top {
 	position: absolute;
 	left: 0;
 	margin-right: 30px;
-	a{
-		visibility:hidden;
-		@include desktop{
-			visibility:visible;
+	a {
+		visibility: hidden;
+		@include desktop {
+			visibility: visible;
 		};
 	}
 }
-
 div {
 	.secondary li a {
 		line-height: 2.3rem;
@@ -246,33 +212,29 @@ div .secondary {
 	font-family: $font_header_footer;
 	@include desktop {
 		text-align: right;
-		padding: 0px 10px;
-		    margin-bottom: 0px;
+		padding: 0 10px;
+		margin-bottom: 0;
 		height: 69px;
 		margin-top: 40px;
 	}
 	text-align: center;
 	padding-right: 5px;
 	background-color: #248E6A;
-
 	& .active {
 		background-color: $color_btn_green;
 	}
-
-	ul { @include desktop{
-		display: fixed;
-	}
-
+	ul {
+		@include desktop {
+			display: fixed;
+		}
 		min-width: 50%;
 	}
-
 	li {
 		display: inline-block;
-		padding: 8px 0px;
+		padding: 8px 0;
 		@include desktop {
-	 padding: 16.4px 0px;
+			padding: 16.4px 0;
 		};
-
 		a {
 			color: white;
 			padding: 0 20px;
@@ -282,33 +244,26 @@ div .secondary {
 			@include desktop {
 				font-size: 1.4rem;
 			}
-
 		}
 	}
 }
-
-div .secondary a{
+div .secondary a {
 	display: inline-block;
-
 	border-left: solid 1px white;
 }
-
-div .secondary
-{
- li:first-child a{
-	border-left: none;
+div .secondary {
+	li:first-child a {
+		border-left: none;
+	}
+	li:nth-child(2) a {
+		border-left: none;
+	}
 }
-li:nth-child(2) a{
- border-left: none;
-}
-}
-
 //// menu pop-up  mobile size on scroll///
- div .transparent-menu{
+div .transparent-menu {
 	position: fixed;
-	 @include desktop{
+	@include desktop {
 		display: inline-block;
 	};
 	background-color: $white;
-
 }
