--- a/themes/montessori-theme/sass/_about.scss
+++ b/themes/montessori-theme/sass/_about.scss
@@ -2,7 +2,6 @@
 # About Page
 --------------------------------------------------------------*/
 // General Setting
-
 * {
 	box-sizing: border-box;
 }
@@ -11,42 +10,34 @@
 	padding-left: $basic_pading * 2;
 	padding-right: $basic_pading * 2;
 }
-
-
 fonts h1,
 h2,
 h3 {
 	font-family: $font_title;
 	font-weight: normal;
 }
-
 h1 {
 	font-size: $h1_size_mob;
 	line-height: 2.625rem;
 }
-
 h2 {
 	font-size: $h2_size_mob;
 	line-height: 2.125rem;
 }
-
 h3 {
 	font-size: $h3_size_mob;
 	line-height: 1.6875rem;
 }
-
 p {
 	font-size: 1.625rem;
 	line-height: $mobile_line_height;
 	font-style: $font_body;
 }
-
 .spcil p {
 	font-size: 1.25rem;
 	line-height: $mobile_line_height;
 	font-style: $font_main;
 }
-
 .green-btn {
 	background-color: #4FC8A1;
 	color: $white;
@@ -56,13 +47,11 @@ p {
 	text-decoration: none;
 }
 // about NW School Sectio
-
 .about-school {
 	border-bottom: solid 3px $color_btn_green;
 	padding-bottom: $basic_margin*7.8;
 }
 // Members List Section
-
 .members-list {
 	padding: 2px;
 	flex-wrap: wrap;
@@ -71,7 +60,6 @@ p {
 	// @include desktop {
 	// 	flex-direction: column;
 	// };
-
 	.members-grid {
 		display: flex;
 		flex-wrap: wrap;
@@ -79,7 +67,6 @@ p {
 		@include desktop {
 			flex-direction: row;
 		};
-
 		.members-block {
 			flex: 33%;
 			display: flex;
@@ -90,13 +77,11 @@ p {
 				flex: 1;
 			}
 		}
-
 		.flip-container {
 			display: block;
 			box-shadow: inset 1px 1px 40px 0 rgba(0,0,0,.45);
 			background: #aff1d3;
 			border-radius: 50%;
-
 			.flipper {
 				flex: 1 0 auto;
 				display: flex;
@@ -108,11 +93,9 @@ p {
 				-moz-transform-style: preserve-3d;
 				transition: 1.9s;
 				transform-style: preserve-3d;
-
 				.members_det {
 					display: block;
 				}
-
 				p {
 					font-size: 1rem;
 					font-style: italic;
@@ -124,12 +107,10 @@ p {
 				background-size: cover;
 				border-radius: 50%;
 				flex: 2;
-
 				img {
 					border-radius: 50%;
 				}
 			}
-
 			.back {
 				border-radius: 50%;
 				position: absolute;
@@ -149,14 +130,12 @@ p {
 				};
 			}
 		}
-
 		.flip-container.hover .flipper,
 		.flip-container:hover .flipper {
 			-webkit-transform: rotateY(180deg);
 			-moz-transform: rotateY(180deg);
 			transform: rotateY(180deg);
 		}
-
 		.back,
 		.flip-container,
 		.front {
@@ -171,14 +150,12 @@ p {
 				height: 200px;
 			};
 		}
-
 		.back,
 		.front {
 			-webkit-backface-visibility: hidden;
 			-moz-backface-visibility: hidden;
 			backface-visibility: hidden;
 		}
-
 		.members_det {
 			text-align: center;
 			font-size: $font_member_staff;
@@ -186,14 +163,12 @@ p {
 	}
 }
 // Members at Large Section
-
 .members_at_large {
 	padding-bottom: $basic_margin*5.5;
 	border-bottom: solid 3px $color_btn_green;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-
 	.members_at_large-grid {
 		display: flex;
 		flex-wrap: wrap;
@@ -212,46 +187,37 @@ p {
 	}
 }
 // Meeting Minutes & Archive Section
-
 .meeting-minutes {
 	display: flex;
 	flex-direction: column;
 	padding-bottom: $basic_margin*5.5;
 	border-bottom: solid 3px $color_btn_green;
-
 	.news-img img {
 		width: 100%;
 	}
-	form{
-    padding: 2rem;
-		input{
-		}
+	form {
+		padding: 2rem;
+		input {}
 	}
-
 	.red-more {
 		align-self: flex-end;
 	}
 }
 // newsLetter Section
-
 .newsLetter {
 	display: flex;
 	flex-direction: column;
 }
-
 .archive-sec {
 	display: flex;
 	justify-content: space-between;
-
 	.arch-btn {
 		order: 1;
 		align-self: flex-start;
-
 		.green-btn {
 			font-size: 1.25rem;
 		}
 	}
-
 	.arch-block {
 		width: 55%;
 		border-top: solid 3px $color_btn_green;
