--- a/themes/montessori-theme/sass/_elements.scss
+++ b/themes/montessori-theme/sass/_elements.scss
@@ -1,21 +1,16 @@
-
 /*Elements*/
-
 .content-wrapper {
 	max-width: 90%;
 	margin: 0 auto;
 }
 ////Montessori Elements Typography ////
-
 a:hover {
 	cursor: pointer;
 	color: $color_btn_hover_green;
 }
-
 a {
 	text-decoration: none;
 }
-
 h1,
 h2,
 h3 {
@@ -23,52 +18,49 @@ h3 {
 	font-family: $font_title;
 	font-weight: lighter;
 }
-
 h1 {
 	font-size: $h1_size_mob;
 	@include desktop {
 		h1 {
-		font-family: $font_title;
-		font-weight: lighter;
-		font-size: $h1_size_desktop;
-	}}
+			font-family: $font_title;
+			font-weight: lighter;
+			font-size: $h1_size_desktop;
+		}
+	}
 }
-
 h2 {
 	font-size: $h2_size_mob;
 	@include desktop {
 		h2 {
-		font-size: $h2_size_desktop;
-	}}
+			font-size: $h2_size_desktop;
+		}
+	}
 }
-
 h3 {
 	font-size: $h3_size_mob;
 	font-family: $font_title;
 	@include desktop {
 		h3 {
-		font-size: $h3_size_desktop;
-	}}
+			font-size: $h3_size_desktop;
+		}
+	}
 }
 li,
 p {
 	font-size: $font_body_size_mob;
 	font-family: $font_title;
-
-  @include desktop {
-	li,
-	p {
-		font-size: $font_body_size_desktop;
-	}}
+	@include desktop {
+		li,
+		p {
+			font-size: $font_body_size_desktop;
+		}
+	}
 }
-
-
 *,
 *:after,
 *:before {
 	box-sizing: inherit;
 }
-
 body {
 	background: $white;
 	font-family: $font_body;
@@ -81,7 +73,6 @@ hr {
 	height: 1px;
 	margin-bottom: 1.5rem;
 }
-
 img {
 	height: 100%;
 	max-width: 100%;
