--- a/themes/montessori-theme/sass/_footer.scss
+++ b/themes/montessori-theme/sass/_footer.scss
@@ -20,7 +20,6 @@
     @include desktop {}
 }
 ///*******footer block1 ********///
-
 .footer-block-item1 {
     width: 100%;
     text-align: center;
@@ -42,28 +41,25 @@
     .fa {
         display: none;
         @include desktop {
-          display: inline-block;
-margin-left: 10px;
-margin-top: 5px;
-  padding: 6.2px 8.6px;
-width: 30.6px;
-height: 30.6px;
-color: #fff;
-border: 1px solid #fff;
-border-radius: 50%;
-font-size: 1.1rem;
-}
+            display: inline-block;
+            margin-left: 10px;
+            margin-top: 5px;
+            padding: 6.2px 8.6px;
+            width: 30.6px;
+            height: 30.6px;
+            color: #fff;
+            border: 1px solid #fff;
+            border-radius: 50%;
+            font-size: 1.1rem;
+        }
     }
-
     ul {
         display: inline-flex;
         padding-left: 0;
         padding-right: 0;
-
         li:nth-child(even) a {
             border-left: solid 1px $white;
         }
-
         li:nth-child(3) a {
             border-left: solid 1px $white;
         }
@@ -71,19 +67,16 @@ font-size: 1.1rem;
             li:first-child a {
                 padding-left: 0;
             }
-
             li:nth-child(4) a {
                 border-right: solid 1px $white;
             }
         }
     }
-
     ul li {
         display: inline-block;
         font-size: 1.3rem;
         padding: 0;
         display: inline-block;
-
         a {
             padding: 0 22px;
             margin-right: 0;
@@ -155,8 +148,7 @@ font-size: 1.1rem;
         color: $color_btn_hover_green;
     }
 }
-.footer-block-item2
-a:hover {
+.footer-block-item2 a:hover {
     cursor: pointer;
     color: $color_btn_hover_green;
 }
