--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -6,8 +6,6 @@
 * {
 	box-sizing: border-box;
 }
-// @media screen and (max-width: 480px) {
-
 .nw-program-wrapper {
 	height: auto;
 	margin: 0 auto;
@@ -28,13 +26,8 @@ h1 {
 	line-height: 2.625rem;
 }
 
-h2 {
-	font-size: $h2_size_mob;
-	line-height: 2.125rem;
-}
-
 h3 {
-	font-size: $h3_size_mob;
+	font-size: $h2_size_mob;
 	line-height: 1.6875rem;
 }
 
@@ -100,18 +93,29 @@ p {
 
 // Montessori Daily Schedule Section
 .montessori-schedule{
-	display:inline-flex;
-	flex-direction: row;
-	p{
-		display:inline-block;
-		padding:5px;
+
+	#div1 .targetDiv{
+  width:400px;
+  height:700px;
+	background-color: red;
 }
-	.morning{
-		flex: 50%;
-	}
-	.afternoon{
-		flex: 50%;
-	}
+#div2 .targetDiv{
+  width:400px;
+  height:700px;
+	background-color: green;
+}
+// 	display:inline-flex;
+// 	flex-direction: row;
+// 	p{
+// 		display:inline-block;
+// 		padding:5px;
+// }
+// 	.morning{
+// 		flex: 50%;
+// 	}
+// 	.afternoon{
+// 		flex: 50%;
+// 	}
 }
 
 
@@ -239,21 +243,6 @@ p {
 			}
 		}
 	}
-	// .enroll-info {
-	// 	margin-top: 27rem;
-	// 	@media screen and (min-width: 450px) {
-	// 		margin-top: 17rem;
-	// 	}
-	// 	@media screen and (min-width: 640px) {
-	// 		margin-top: 8rem;
-	// 	}
-	// 	@media screen and (min-width: 768px) {
-	// 		margin-top: 5rem;
-	// 	}
-	// 	@include desktop {
-	// 		margin-top: 2rem;
-	// 	}
-	// }
 	.enroll-block {
 		max-width: 70%;
 		display: flex;
@@ -264,7 +253,6 @@ p {
 			margin-bottom: 50px;
 			align-self: center;
 		}
-
 		.enroll-btn {
 			align-self: center;
 		}
@@ -388,14 +376,12 @@ p {
 				height: 200px;
 			}
 		}
-
 		.back,
 		.front {
 			-webkit-backface-visibility: hidden;
 			-moz-backface-visibility: hidden;
 			backface-visibility: hidden;
 		}
-
 		.teacher_det {
 			text-align: center;
 			font-size: $font_member_staff;
